# CigiHoldSpam

./: .gitignore  README.md  pyproject.toml
configs/: Default.ini
src/: view.py
src/core/: config_manager.py  input_simulator.py  key_mapper.py  os_listener.py  process_monitor.py  spam_controller.py
